--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "5.8.*",
-        "laravel/tinker": "^1.0",
-        "paquettg/php-html-parser": "^2.0"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
